--- a/docs/latex/src/sections/AA_cover.tex
+++ b/docs/latex/src/sections/AA_cover.tex
@@ -1,8 +1,7 @@
 \title{WE NEED A TITLE HEERE ???}
 
-\author[first]{Leonor Costa}
-\author[second]{Celso Ribeiro}
-\author[third]{David Mendes}
+\author[first]{Leonor Ramos}
+\author[second]{Tiago Patrício}
+\author[third]{João Almeida}
 \author[fourth]{David Mendes}
-\affiliation{organization={ISCTE – Instituto Universitário de Lisboa},
-            country={Portugal}}
+\affiliation{organization={ISCTE – Instituto Universitário de Lisboa}, country={Portugal}}
