--- a/latex/IAR2025/main.tex
+++ b/latex/IAR2025/main.tex
@@ -573,6 +573,8 @@ This outcome suggests that for this navigation task, the additional complexity o
 
 \section{Conclusion}
 
+This project demonstrated that while both classical and modern approaches can yield effective controllers for Thymio robots, their performance depends on task complexity and algorithm suitability. Evolutionary algorithms and simple ANNs performed well in structured environments, but struggled with generalization. Deep Reinforcement Learning, particularly PPO with ReLU and well-shaped rewards, achieved robust performance in randomized settings. However, adding memory through Recurrent PPO introduced instability, showing that more complex models are not always advantageous for relatively simple navigation tasks.
+
 \bibliographystyle{elsarticle-harv}
 \bibliography{main}
 
